Pass current_author into router component

--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -1,1 +1,1 @@
-<%= react_router 'MyRoutes', 'HistoryLocation', {}, { prerender_location: @location_path } %>
+<%= react_router 'MyRoutes', 'HistoryLocation', @data, { prerender_location: @location_path } %>
