--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -4,22 +4,28 @@
   <%= devise_error_messages! %>
   <%= f.hidden_field :reset_password_token %>
 
-  <div class="field">
-    <%= f.label :password, "New password" %><br />
+  <div class="form-gruop">
+    <%= f.label :password, "New password", class: "control-label" %>
     <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autofocus: true, autocomplete: "off" %>
+      <em>(<%= @minimum_password_length %> characters minimum)</em>
+    <% end %>
+    <div>
+      <%= f.password_field :password, autofocus: true, autocomplete: "off", class: "form-control" %>
+    </div>
   </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
+  <div class="form-gruop">
+    <%= f.label :password_confirmation, "Confirm new password", class: "control-label" %>
+    <div>
+      <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control" %>
+    </div>
   </div>
 
   <div class="actions">
-    <%= f.submit "Change my password" %>
+    <%= f.submit "Change my password", class: "btn btn-primary" %>
   </div>
 <% end %>
+
+<hr />
 
 <%= render "devise/shared/links" %>
