--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 
   <div class="container">
     <div class="blog-header">
-      <h1 class="blog-title">Blog</h1>
+      <h1 class="blog-title"><a href="/">Blog</a></h1>
       <p class="lead blog-description">Simple blog.</p>
     </div>
 
